# worldclock

./: .gitignore  README.md  package-lock.json  package.json  worldclock.html
.github/workflows/: build-windows.yml  windows-build.yml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
