[package]
name = "worldclock"
version = "0.1.0"
edition = "2021"

[lib]
name = "worldclock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "worldclock"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
